// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should handle HIDE_ALERT 1`] = `undefined`;

exports[`App should handle SHOW_ALERT 1`] = `undefined`;

exports[`App should handle persist/REHYDRATE with payload 1`] = `
Object {
  "alerts": Array [],
  "filter": Object {
    "showTags": false,
  },
  "isMobile": false,
  "notifications": undefined,
  "rehydrated": true,
}
`;

exports[`App should handle persist/REHYDRATE without payload 1`] = `
Object {
  "alerts": Array [],
  "filter": Object {
    "category": "",
    "columns": 3,
    "search": "",
    "showTags": false,
    "tag": "",
    "view": "latest",
    "viewBefore": "",
  },
  "isMobile": false,
  "notifications": undefined,
  "rehydrated": true,
}
`;

exports[`App should return the initial state 1`] = `
Object {
  "alerts": Array [],
  "filter": Object {
    "category": "",
    "columns": 3,
    "search": "",
    "showTags": false,
    "tag": "",
    "view": "latest",
    "viewBefore": "",
  },
  "isMobile": false,
  "rehydrated": false,
}
`;
